[gd_scene load_steps=3 format=3 uid="uid://3tqx0f4g7hlj"]

[ext_resource type="Script" path="res://scenes/scripts/main/audio_server.gd" id="1_hdnxs"]
[ext_resource type="AudioStream" uid="uid://em285yymlsjj" path="res://assets/audio/music/first_in_line-placeholder.mp3" id="2_vygfg"]

[node name="AudioManager" type="Node"]
process_mode = 3
script = ExtResource("1_hdnxs")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_vygfg")
bus = &"Music"

[node name="GlobalEffectPlayer" type="AudioStreamPlayer" parent="."]

[node name="EffectPlayer" type="AudioStreamPlayer2D" parent="."]
bus = &"Effects"

[connection signal="finished" from="MusicPlayer" to="." method="_on_music_finished"]
